<resources>
    <string name="appName">MusicInstrumentLessoner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GirlsDay mina</string>
    <string name="nav_header_subtitle">justkukaro@naver.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_name_kor">악기 레스너</string>
    <string name="splash_comment">"Bring the joy \nto your instrument"</string>

    <!--navigation bar string-->
    <string name="nav_bar_notification">notification</string>
    <string name="nav_bar_template">template</string>
    <string name="nav_bar_group">group</string>
    <string name="nav_bar_store">store</string>
    <string name="nav_bar_information">information</string>

    <!--search_layout string-->
    <string name="search_lay_placeholder">Search messages</string>

    <!--notification_layout string-->
    <string name="teacher_upload_music">선생님께서 새로운 곡을 업로드 하였습니다.</string>
    <string name="friend_complete_music">친구가 올린곡을 완주하였습니다.</string>
    <string name="debug_aoa_choa_name">AOA Choa</string>
    <string name="debug_aoa_choa_email">jiharuforgive@league.of.legend</string>
    <string name="debug_aoa_choa_date1">11:12 AM</string>
    <string name="debug_aoa_choa_main">선생님께서 새로운 곡을 업로드 하였습니다.</string>
    <string name="debug_aoa_choa_music_title">월광 소나타 제3악장</string>
    <string name="debug_twice_dahyun_name">Twice Dahyun</string>
    <string name="debug_twice_dahyun_emai">ekekdid@pknu.ac.kr</string>
    <string name="debug_twice_dahyun_date1">07:24 AM</string>
    <string name="debug_twice_dahyun_main">친구가 올린곡을 완주하였습니다.</string>
    <string name="debug_twice_dahyun_music_title">요한 파헬벨 캐논 변주곡</string>

    <!--mi_notification_layout string-->
    <string name="debug_mi_date1">08:13 AM</string>
    <string name="debug_mi_main">제출기간이 3일 남았습니다.</string>
    <string name="debug_mi_music_title">체르니 95번</string>

    <!--template_layout string-->
    <string name="debug_beethoven_name">Beethoven</string>
    <string name="debug_beethoven_music">월광 소나타 제3악장</string>
    <string name="debug_beethoven_main">남은 반복횟수 : 0 / 10</string>
    <string name="debug_beethoven_sub">곡 성공률 : 0%</string>

    <string name="debug_haydn_name">Haydn</string>
    <string name="debug_haydn_music">놀람 교향곡</string>
    <string name="debug_haydn_main">남은 반복횟수 : 9 / 10</string>
    <string name="debug_haydn_sub">곡 성공률 : 90%</string>
    <string name="debug_haydn_explain">1악장 - 아다지오 - 비바체 아사이 (Adagio - vivace assai, 느릿느릿하게 - 충분히 빠르고 활기차게)\n2악장 - 안단테 (Andante, 사람의 걸음걸이만큼 느리게)\n3악장 - 메뉴에토: 알레그로 몰토 (Menuetto: Allegro molto, 아주 빠르게)\n4악장 - 피날레: 알레그로 몰토 (Finale: Allegro molto, 아주 빠르게)</string>

    <string name="debug_czerny_name">Czerny</string>
    <string name="debug_czerny_music">체르니 95번</string>
    <string name="debug_czerny_main">남은 반복횟수 : 8 / 10</string>
    <string name="debug_czerny_sub">곡 성공률 : 70%</string>

    <string name="debug_pachelbel_name">Pachelbel</string>
    <string name="debug_pachelbel_music">요한 파헬벨 캐논 변주곡</string>
    <string name="debug_pachelbel_main">남은 반복횟수 : 14 / 20</string>
    <string name="debug_pachelbel_sub">곡 성공률 : 70%</string>

    <string name="tempalte_detail_act_teacher_pre">Teacher : </string>
    <string name="title_activity_teacher_practice_detail">TeacherPracticeDetailActivity</string>
</resources>
