<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_note"
            android:icon="@drawable/my_note"
            android:title="@string/nav_bar_my_note" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/check"
            android:title="@string/nav_bar_notification" />
        <item
            android:id="@+id/nav_template"
            android:icon="@drawable/music"
            android:title="@string/nav_bar_template" />
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/star"
            android:title="@string/nav_bar_group" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/bag"
            android:title="@string/nav_bar_store" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_information"
                android:icon="@drawable/information"
                android:title="@string/nav_bar_information" />
        </menu>
    </item>

</menu>
