<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:layout_margin="10dp"
    android:background="@drawable/notification_mi_rounded">

    <ImageView
        android:id="@+id/ivMiNotificationUserImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:maxHeight="50dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logo_user_round" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMiNotificationLayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="left"
                android:text="@string/app_name_kor" />

            <TextView
                android:id="@+id/tvMiNotificationLayDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/commonDateColor"
                android:text="@string/debug_mi_date1" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvMiNotificationLayMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="left"
            android:paddingBottom="5dp"
            android:text="@string/debug_mi_main" />

        <TextView
            android:id="@+id/tvMiNotificationLayMusicTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/debug_mi_music_title" />
    </LinearLayout>
</LinearLayout>