<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:layout_margin="10dp"
    android:weightSum="1"
    android:orientation="horizontal"
    android:background="@drawable/notification_user_rounded">

    <ImageView
        android:id="@+id/ivTemplateUserImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:maxHeight="50dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/beethoven_round" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTemplateLayMusicTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="left"
                android:text="@string/debug_beethoven_music" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvTemplateLayMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="5dp"
            android:text="@string/debug_beethoven_main" />

        <TextView
            android:id="@+id/tvTemplateLaySub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="@color/musicPersonalColor"
            android:text="@string/debug_beethoven_sub" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:background="@drawable/template_teacher_circle"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivTemplateLayTeacherImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:maxHeight="50dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/choa_round" />
    </LinearLayout>
</LinearLayout>